Moar WIP on virtual dom implementation

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="css/app.css">
 	</head>
 	<body>
+		<div id="main"></div>
 		<!-- Scripts here. Don't remove this ↓
 		<script src="bower_components/todomvc-common/base.js"></script> -->
 		
@@ -18,8 +19,7 @@
     
         <!-- Run tutorial.webapp.TutorialApp -->
         <script type="text/javascript">
-          var body = document.getElementsByTagName("body")[0]
-          nz.kiwi.johnson.stuff.TestJS(body).main();
+          nz.kiwi.johnson.stuff.TestJS().main();
         </script>
 	</body>
 </html>
