Final WIP for now...

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
         <!-- Run tutorial.webapp.TutorialApp -->
         <script type="text/javascript">
-          nz.kiwi.johnson.stuff.TestJS().main();
+          nz.kiwi.johnson.stuff.FRPApp().main();
         </script>
 	</body>
 </html>
