--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
 		<script src="bower_components/todomvc-common/base.js"></script> -->
 		
         <script type="text/javascript" src="./target/scala-2.11/todomvc-scalajs-jsdeps.js"></script>
+        <script type="text/javascript" src="./virtual-dom.js"></script>
         <script type="text/javascript" src="./target/scala-2.11/todomvc-scalajs-fastopt.js"></script>
     
         <!-- Run tutorial.webapp.TutorialApp -->
         <script type="text/javascript">
-          nz.kiwi.johnson.stuff.FRPApp().main();
+          nz.kiwi.johnson.stuff.TodoApp().main();
         </script>
 	</body>
 </html>
