--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<title>Template • TodoMVC</title>
+		<title>scalaFlux • TodoMVC</title>
 		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
 		<!-- CSS overrides - remove if you don't need it -->
 		<link rel="stylesheet" href="css/app.css">
@@ -19,7 +19,7 @@
     
         <!-- Run tutorial.webapp.TutorialApp -->
         <script type="text/javascript">
-          nz.kiwi.johnson.stuff.TodoApp().main();
+          examples.todomvc.TodoApp().main();
         </script>
 	</body>
 </html>
