--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 		<!-- Scripts here. Don't remove this ↓
 		<script src="bower_components/todomvc-common/base.js"></script> -->
 		
-        <script type="text/javascript" src="./target/scala-2.11/todomvc-scalajs-jsdeps.js"></script>
+        <script type="text/javascript" src="./target/scala-2.11/scalaflux-jsdeps.js"></script>
         <script type="text/javascript" src="./virtual-dom.js"></script>
-        <script type="text/javascript" src="./target/scala-2.11/todomvc-scalajs-fastopt.js"></script>
+        <script type="text/javascript" src="./target/scala-2.11/scalaflux-fastopt.js"></script>
     
         <!-- Run tutorial.webapp.TutorialApp -->
         <script type="text/javascript">
